styles/style.css
body {
    margin: 0;
}

/* .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* если добавить align-items: center;, то лого становится большим 
    margin: 92px 24px 96px; */


.header {
    margin: 92px 24px 96px;
    display: grid;
    grid-template-columns: 1fr min-content 1fr;  
}

.header__links-list {
    display: flex;
    flex-direction: row; 
    padding-left: 28px;
    padding-top: 44px;
    gap: 30px;
    list-style: circle;
    font-size: 18px;
    font-weight: 400;
    line-height: 21.13px;
    letter-spacing: 0.01em;
    text-align: left;
    text-underline-offset: 5px;

}

.header__links-list-item_no-bullit {
    list-style-type: none;

}

.header__logo {
    display: block;
    height: 105px;
    width: 148px;
}

.header_contacts {
    display: flex;
    flex-direction: column;
    padding-left: 187px;
    padding-top: 5px;
    list-style: none;
    font-size: 18px;
    font-weight: 400;
    line-height: 24.3px;
    letter-spacing: 0.01em;
    text-align: left;
    text-underline-offset: 5px;
    

}

address {
    font-style: normal;
    letter-spacing: normal;
}

.cover {
    display: flex;
    height: 757px;
    margin-bottom: 179px;
    background-image: url("../images/lotus-flower.png");
    position: relative;
}

.overlay {
    height: 757px;
    width: 1100px;
    background-color: rgb(0 0 0 / 0.6);
    position: absolute;
    
}

.cover_title {
    display: flex;
    flex-direction: column;
    position: absolute;
    justify-content: space-between;
    width: 1000px;
    height: 355px;
    top: 165px;
    left: 50px;
    gap: 0px;
    color: white;
    font-weight: bold;
    line-height: 115%;
    font-size: 100px;
    text-transform: uppercase;
    letter-spacing: 0.3em;
    
}

.letter-spacing-extended {
    letter-spacing: 0.6em;
}

.no-letter-spacing {
    letter-spacing: 0em;
}

.aligned-text {
    display: flex;
    align-self: start;
    width: 316px;
    height: 115px;
    top: 165px;
    left: 50px;
    gap: 0px;
   
 
}
.aligned-text_center {
    display: flex;
    align-self: center;
    align-items: center;
    width: 369px;
    height: 100px;
    top: 300px;
    left: 336px;
    gap: 0px;
}

.aligned-text_right {
    display: flex;
    align-self: flex-end;
    align-items: flex-end;
    width: 417px;
    height: 100px;
    top: 420px;
    left: 633px;
    gap: 0px;
    

}

.cover__description {
    position: absolute;
    display: flex;
    flex-direction: row;
    /*align-items: center;
    justify-content: space-around;
    width: 1022px;
    margin-bottom: 62px;*/
    
}

.cover_description-text {
    display: flex;
    font-size: 22px;
    font-weight: 400;
    line-height: 28px;
    text-transform: uppercase;
    color: white;
    width: 637px;
    height: 28px;
    margin-top: 667px;
    margin-left: 78px;
    
}

.bet-button {
    border: none;
    outline: none;
    display: inline-block;
    background-color: transparent;
    color: white;
    font-size: 22px;
    font-weight: 500;
    line-height: 25.83px;
    text-transform: uppercase;
    text-align: center;
    width: 256px;
    height: 51px;
    margin-top: 655px;
    border: solid 1px white;
}

.lots {
    display: flex;
    flex-direction: column;
    margin-left: 24px;
    margin-right: 24px;
}

.lots__heading {
    font-size: 40px;
    font-weight: 700;
    line-height: 46.96px;
    text-align: left;
    text-transform: uppercase;
    padding-left: 40px;


}

.lots__card-list {
    display: flex;
    justify-content: space-between;
    list-style: none;
    padding-top: 27px;

}

.lots__card-list-item {
    width: 334px;
    height: 563px;

/*top: 74px;
gap: 0px;
opacity: 0px;*/

}

.card {
    min-height: 100%;
    width: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-content: space-between;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 51px;
    padding-bottom: 48px;
    
}

.card_type_film {
    position: relative;
    background-image: url(../images/card-lot-01.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}
.card_type_book {
    position: relative;
    background-image: url(../images/card-lot-02.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}
.card_type_picture {
    position: relative;
    background-image: url(../images/card-lot-03.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

.overlay__card {
    position: absolute;
    width: 334px;
    height: 563px;
    background-color: rgb(0 0 0 / 0.6);
}

.card__title {
    display: flex;
    font-size: 22px;
    font-weight: 700;
    line-height: 26.4px;
    text-transform: uppercase;
    text-align: left;
    color: white;
}

.card__text {
    display: flex;
    font-size: 20px;
    font-weight: 400;
    line-height: 24px;
    text-align: left;
    color: white;
}


.lots__look-more-link {
    padding-top: 30px;
    padding-left: 40px;
    font-size: 20px;
    font-weight: 400;
    line-height: 23.48px;
    text-align: left;
    text-underline-offset: 5px;
}


.footer {
    display: flex;
    justify-content: space-between;
    align-items: start;
    margin: 180px 50px 88px;
}

.footer_contacts {
    display: flex;
    flex-direction: column;
    list-style: none;
   
}

.footer__menu-list {
    display: flex;
    flex-direction: column;
    list-style: none;
    text-align: center;
}

.footer__social-list {
    display: flex;
    gap: 48px;
    list-style: none;
}

.footer__social-list-item {
    height: 48px;
    width: 48px;
}

